--- a/projects/5pillarsgame/index.html
+++ b/projects/5pillarsgame/index.html
@@ -653,7 +653,7 @@
 
 <script>
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', '<UA-XXXXXXXX-X>', 'auto');
+  ga('create', 'UA-104892661-1', 'auto');
   ga('send', 'pageview');
   loadJSDeferred('https://www.google-analytics.com/analytics.js');
 </script>
