Update the about me descriptions

--- a/projects/5pillarsgame/index.html
+++ b/projects/5pillarsgame/index.html
@@ -251,7 +251,7 @@
     About
   </h2>
 
-  <p>My name is Waleed. I am an Android Developer who loves to build great apps.
+  <p>My name is Waleed. I am an Software Engineer and Developer who loves to build great apps.currently specializing in mobile development and in particular Android and ReactNative.
  While crafting applications I take special care of application architecture, testability, and performance.</p>
 
 <p>I learn every day because I think that learning is a continuous process. I feel that making mistakes is not a crime but not learning from mistakes is. This site is where I write about my experiences and passions.</p>
